Puppeteer should be able to download as PDF

--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,6 +5,9 @@
 @import url('./utility/editor.css');
 @import url('./utility/notification-modal.css');
 
+/* experimental */
+@import url('./experimental/pdf-download-button.css');
+
 
 /* mobile */
 @import url('./mobile.css');
@@ -17,6 +20,3 @@
 		/* rows */
 		@import url('./row.css');
 		@import url('./row-psuedo.css');
-
-
-		@import url('./deletion-modal.css');
