--- a/public/CSS/experimental/pdf-download-button.css
+++ b/public/CSS/experimental/pdf-download-button.css
@@ -1,10 +1,11 @@
-	#save-as-pdf {
+	#save-as-pdf, 
+	#send-pdf-to-slack,
+	#send-screenshot-to-slack {
 		align-items: center;
 		box-sizing: border-box;
 		display: flex;
 		height: 39.5px;
 		justify-content: center;
-		margin: 80px 0px auto auto;
 		position: relative;
 		width: 180px;
 
@@ -20,14 +21,25 @@
 		white-space: nowrap;
 	}
 
-	#save-as-pdf:hover {
+	#save-as-pdf { margin: 80px 0px auto auto; }
+	#send-pdf-to-slack { margin: 140px 0px auto auto; width: 200px;}
+	#send-screenshot-to-slack { margin: 200px 0px auto auto; width: 200px;}
+
+	#save-as-pdf:hover,
+	#send-pdf-to-slack:hover,
+	#send-screenshot-to-slack:hover {
 		cursor: pointer;
 	}
 
 		@media(max-width: 650px) {
 
-			#save-as-pdf { 
-				margin: 80px auto auto auto;
+			#save-as-pdf,
+			#send-pdf-to-slack,
+			#send-screenshot-to-slack { 
 				width:	calc(100% - 12px) ;
 			}
+
+			#save-as-pdf { margin: 80px auto auto auto; }
+			#send-pdf-to-slack { margin: 140px auto auto auto; }
+			#send-screenshot-to-slack { margin: 200px auto auto auto; }
 		}
