--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,6 +5,9 @@
 @import url('./utility/editor.css');
 @import url('./utility/notification-modal.css');
 
+/* animations */
+@import url('./animations/buttons.css');
+
 /* experimental */
 @import url('./experimental/pdf-download-button.css');
 
